--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<div class="row form">
             	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 	                <form id="my-form">
-	                	<div>
-	                		<h2>Enter</h2>
+	                	<div class="form-header">
+	                		<h2>Complete the Form Below</h2>
 	                	</div>
 						<div class="form-group">
 							<label class="label label-info">Train Name</label>
@@ -67,7 +67,9 @@
 							<label>Frequency (min)</label>
 							<input type="text" class="form-control" id="frequency" placeholder="What is the frequency?"id="rateForm">
 						</div>
+						<div class="form-group">
 							<button type="submit" id="form-submit" class="btn btn-primary">Submit</button>
+						</div>
 	                </form>
             	</div>			
 			</div>
