--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<!--Bootstrap-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
+		<script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
+		<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
+
 		<!--custom stylesheet-->	
 		<link rel="stylesheet" type="text/css" href="assets/style.css">
 
@@ -49,26 +52,26 @@
             	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 	                <form id="my-form">
 	                	<div class="form-header">
-	                		<h2>Complete the Form Below</h2>
+	                		<h2>Add Train</h2>
 	                	</div>
 						<div class="form-group">
 							<label class="label label-info">Train Name</label>
-							<input type="text" class="form-control" id="train-name" placeholder="Enter Your Name">
+							<input type="text" class="form-control" id="train-name" placeholder="Name of Train Line">
 						</div>
 						<div class="form-group">
 							<label>Destination</label>
-							<input type="text" class="form-control" id="destination" placeholder="What is your role?">
+							<input type="text" class="form-control" id="destination" placeholder="What is the train's destination?">
 						</div>
 						<div class="form-group">
-							<label>First Train Time (HH:mm -military time)</label>
-							<input type="text" class="form-control" id="first-train" placeholder="What is your start date?">
+							<label>First Train Time</label>
+							<input type="text" class="form-control" id="first-train" placeholder="What time will the next train come?">
 						</div>
 						<div class="form-group">
 							<label>Frequency (min)</label>
 							<input type="text" class="form-control" id="frequency" placeholder="What is the frequency?"id="rateForm">
 						</div>
 						<div class="form-group">
-							<button type="submit" id="form-submit" class="btn btn-primary">Submit</button>
+							<button type="submit" id="form-submit" class="btn btn-info">Submit</button>
 						</div>
 	                </form>
             	</div>			
