--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
 		<div class="container-fluid">
 			<div class="row">
-				<h1 class="header">Train Schedule</h1>
+				<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+					<h1 class="header">Train Schedule</h1>					
+				</div>
+				<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<button type="button" class="btn btn-default" id="logout">Log Out</button>
+				</div>
 			</div>
 		</div>
 		<div class="container">
