--- a/login.html
+++ b/login.html
@@ -29,19 +29,19 @@
 					<form>
   						<div class="form-group">
     						<label for="exampleInputEmail1">Email address</label>
-    						<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+    						<input type="email" class="form-control" id="email" placeholder="Email">
   						</div>
   						<div class="form-group">
 						    <label for="exampleInputPassword1">Password</label>
-						    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+						    <input type="password" class="form-control" id="password" placeholder="Password">
   						</div>
 					</form>
 				</div>
 			</div>
 			<div class="row">	
 				<div class="col-md-4 col-md-offset-8">
-					<button type="submit" class="btn btn-default" id="log-in">Log In</button>
-					<button type="submit" class="btn btn-info" id="sign-up">Sign Up</button>
+					<button type="submit" class="btn btn-default" id="login">Log In</button>
+					<button type="submit" class="btn btn-info" id="signup">Sign Up</button>
 				</div>
 			</div>
 		</div>
@@ -50,7 +50,8 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>	
 
 		<!--javascript file-->
-	    <script type="text/javascript" src="schedule.js"></script>	
+	    <script type="text/javascript" src="login.js"></script>
+
 
 	</body>
 </html>
