--- a/login.html
+++ b/login.html
@@ -25,6 +25,12 @@
 
 		<div class="container">
 			<div class="row">
+				<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 header">
+					<h1>Train Schedule</h1>					
+				</div>
+			</div>
+			<div class="box">			
+			<div class="row">
 				<div class="col-sm-8 col-md-8 col-lg-8 col-md-offset-4 col-lg-offset-4">
 					<form>
   						<div class="form-group">
@@ -39,10 +45,11 @@
 				</div>
 			</div>
 			<div class="row">	
-				<div class="col-md-4 col-md-offset-8">
+				<div class="col-md-4 col-md-offset-8 signup-buttons">
 					<button type="submit" class="btn btn-default" id="login">Log In</button>
 					<button type="submit" class="btn btn-info" id="signup">Sign Up</button>
 				</div>
+			</div>
 			</div>
 		</div>
 
